# -Bit-Link-Miner-Manager

./: .gitignore  Cargo.toml  README.md  windows_setup.iss
.github/workflows/: build-windows.yml
Docs/: BACKLOG.md  MinerProtocols.md  PRD.md  TechnicalDesign.md
Docs/Features/: CredentialsManagement.md
backend/: Cargo.toml
backend/examples/: check_uptime.rs  debug_whatsminer.rs  debug_whatsminer_web.rs  diagnose_reboot.rs  manual_test.rs  monitor_demo.rs  reboot_miner.rs  scan_network.rs  test_blink.rs  test_blink_cycle.rs  test_set_pools.rs
backend/src/: frb_generated.rs  lib.rs  utils.rs
backend/src/api/: commands.rs  mod.rs  models.rs  monitor.rs  scanner.rs  settings.rs  simple.rs
backend/src/client/: antminer_web.rs  mod.rs  whatsminer_web.rs
backend/src/client/parsers/: antminer.rs  mod.rs  whatsminer.rs
backend/src/core/: config.rs  error.rs  mod.rs  models.rs
backend/src/monitor/: mod.rs
backend/src/scanner/: mod.rs
backend/tests/: mock_miner.rs  monitor_tests.rs  scanner_tests.rs
frontend/: pubspec.yaml
frontend/integration_test/: simple_test.dart
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt
frontend/linux/flutter/: generated_plugins.cmake
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/rust_builder/: cargokit.yaml  pubspec.yaml
frontend/test/: action_controller_test.dart  widget_test.dart
src/: lib.rs
src/client/: mod.rs
src/core/: error.rs  mod.rs
src/monitor/: mod.rs
tests/: mock_miner.rs  monitor_tests.rs  scanner_tests.rs
(+55 files in other folders)
