[package]
name = "bitlink_miner_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ipnetwork = "0.20"
dashmap = "6.1"

[dev-dependencies]
tokio-test = "0.4"
