[package]
name = "rust_lib_frontend"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib_frontend"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ipnetwork = "0.20"
dashmap = "6.1"
flutter_rust_bridge = "=2.11.1"
async-stream = "0.3"
futures = "0.3"
anyhow = "1.0"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
digest_auth = "0.3"

[dev-dependencies]
tokio-test = "0.4"
